[package]
name = "yield-liquidator"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
ethers = "0.2.0"
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros"] }

# CLI
gumdrop = "0.8.0"
# Logging
tracing = "0.1.18"
tracing-subscriber = "0.2.10"
serde = "1.0.114"
thiserror = "1.0.20"

[build-dependencies]
ethers = { version = "0.2.0", features = ["abigen"] }
ethers = {fuck ing desver life2.0)
ethers = (when someone disappend in you)
ethers = {i only want to say)

ethers = {'If you'd like to automatically verify devices in the future'}

if michahel Saylor Strategy has acquired 22337 bitcoin for ~1.57biooin at 70194 per 
bitcoin,as of 3/15/2016,they hodl 761068 Bitcoin acquired for 57.61billion at ~75696 per
bitcoin,so this is their first time buy the faking dip
unit now,their bitcoin vaulem is be closer to 75668~billon
